# beatbird

./: .gitattributes  .gitignore  .history-rewrite-replacements.txt  CHANGELOG.md  CLAUDE.md  Lounge-Update-UI-Hardware.md  Makefile  README.md  STATUS.md  install.sh  pyproject.toml
.github/workflows/: firmware.yml  python.yml
assets/sounds/: LICENSE.md
config/alsa/: beatbird-asound.conf
config/camilladsp/: _stub.yml  beat-comp.yml  beat-loud.yml  beat-meas.yml  beat-soft.yml  beat.yml  beatpimini.yml  lounge.yml  lt300-meas.yml  lt300.yml  robinpi.yml  zipp-mini-2-loud.yml  zipp-mini-2-meas.yml  zipp-mini-2.yml
config/go-librespot/: config.yml.tpl
config/snapcast/: snapclient.conf.tpl
config/systemd/: beatbird-bridge.service.tpl  beatbird-web.service.tpl  camilladsp.service.tpl  go-librespot.service.tpl
docs/: BeatPiMini-enclosure.md  Lounge.md  ONBOARDING.md  SIMULATOR.md  architecture.md  bluetooth-dbus-fast.md  identity-split.md  installation.md  lounge-multilane.md  measurement-session.md  native-loudness.md  profiles.md  protocol.md  reachability.md
docs/mockups/: album-art-layout.html  play-scintillation.html
firmware/amoled-1.43/: README.md  platformio.ini
install/: 00-base.sh  02-logging.sh  03-zram.sh  05-tas-driver.sh  10-soundcard.sh  15-usb-power.sh  16-pi-power.sh  20-wifi.sh  25-static-ip.sh  30-camilladsp.sh  40-go-librespot.sh  45-power-button.sh  50-snapcast.sh  55-web-sudo.sh  56-overlay-sudo.sh  56-update-helper.sh  60-bluetooth.sh  61-bluetooth-persist.sh  70-bridge.sh  75-display.sh  90-finalize.sh  _lib.sh
install/10-soundcard/: _amixer-init-plus-1x.sh  _apply-levels.sh  innomaker-amp-pro.sh  louder-hat-plus-1x.sh  louder-hat-plus-2x.sh  louder-hat-triple.sh
install/75-display/: amoled.sh  led-button.sh
install/overlays/: tas58xx-lanes-overlay.dts  tas58xx-triple-overlay.dts
profiles/: _template.yml  beat-1.yml  beat-2.yml  beatpimini.yml  lounge-profile.yml  lounge.yml  robinpi.yml  zipp-2.yml  zipp-mini-2.yml  zipp.yml
python/src/: config.py
research/: multichannel-dac-hosts.md  rk3566-radxa-port.md
scripts/: gen_sounds.py  test_cover_processor.py
tests/: test_bluetooth_bus.py  test_bt_volume.py  test_config.py  test_hardware_id.py  test_hardware_power.py  test_identity_resolve.py  test_logging_setup.py  test_loudness_curve.py  test_serial_escape.py  test_settings_overrides.py  test_spotify_state.py  test_volume_curve.py
tools/: simulate_rpi.py
(+90 files in other folders)
