[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beatbird"
version = "2.1.0"
description = "BeatBird — active DSP speaker bridge (Pi ↔ display ↔ Home Assistant)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyserial>=3.5",
    "paho-mqtt>=2.0",
    "websocket-client>=1.6",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Web UI rendering. Pico.css + htmx are vendored static assets
    # (src/beatbird/web/static/) so no extra runtime deps for the
    # client side — only Jinja2 here for server-side templating.
    "jinja2>=3.1",
]

[tool.setuptools.package-data]
beatbird = ["web/static/*", "web/templates/*.html"]

[project.optional-dependencies]
fft = ["numpy>=1.26", "sounddevice>=0.4"]
led = ["rpi_ws281x>=5.0"]
dev = ["ruff", "pytest"]

[project.scripts]
beatbird-bridge = "beatbird.bridge:main"
beatbird-web = "beatbird.webserver:main"
beatbird-firmware-update = "beatbird.firmware_updater:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Add src/ to the import path so tests don't require an editable install.
# Keeps the pytest command portable: `python -m pytest tests/` works on a
# fresh clone, no `pip install -e .` step needed.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
